deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-index
spec:
  selector:
    app.kubernetes.io/name: course-index
  ports:
    - name: http
      port: 80
      targetPort: http
